# ftl-project-expert

./: .gitignore  CLAUDE.md  README.md  pyproject.toml
ftl_project_expert/: __init__.py  cli.py  llm.py  topics.py
ftl_project_expert/data/: SKILL.md
ftl_project_expert/prompts/: __init__.py  common.py  derive.py  explore.py  propose.py  research.py  scan.py  sprint_plan.py  summary.py
ftl_project_expert/sources/: __init__.py  github.py  gitlab.py  jira.py  models.py
